# dlt-daemon

./: .clang-format  .cproject  .gitignore  .project  .travis.yml  AUTHORS  Android.bp  BUILD  CMakeLists.txt  COPYING  INSTALL  INSTALL.txt  LICENSE.txt  LIMITATIONS  MODULE.bazel  README  README.md  README.txt  ReleaseNotes.md  ReleaseNotes.txt  TODO  automotive-dlt-c++.pc.in  automotive-dlt-config.cmake.in  automotive-dlt-cxx.pc.in  automotive-dlt.pc.cmake  automotive-dlt.pc.in  automotive-dlt.spec.cheetah  automotive-dlt.spec.cmake  automotive-dlt.spec.in  config.h.cmake  distfiles  doxygen.cfg.cmake  googletest-config.cmake.in  svnversion.h.cmake  transform_spec_file.py  uncrustify.cfg  version.h.cmake
doc/: CMakeLists.txt  GENIVI_Specification_DLT_Daemon.odt  GENIVI_Specification_DLT_Daemon.vsd  GENIVI_UserManual_DLT_Client.odt  GENIVI_UserManual_DLT_Daemon.odt  Message_Flow.odg  create_doc.sh  dlt-adaptor-stdin.1.md  dlt-adaptor-udp.1.md  dlt-control.1.md  dlt-convert.1  dlt-convert.1.md  dlt-convert.1.txt  dlt-daemon.1  dlt-daemon.1.md  dlt-daemon.1.txt  dlt-logd-converter.md  dlt-logstorage-ctrl.1  dlt-logstorage-ctrl.1.md  dlt-logstorage-ctrl.1.txt  dlt-passive-node-ctrl.1  dlt-passive-node-ctrl.1.md  dlt-passive-node-ctrl.1.txt  dlt-qnx-system.md  dlt-receive.1  dlt-receive.1.md  dlt-receive.1.txt  dlt-sortbytimestamp.1  dlt-sortbytimestamp.1.md  dlt-sortbytimestamp.1.txt  dlt-system.1  dlt-system.1.md  dlt-system.1.txt  dlt-system.conf.5  dlt-system.conf.5.md  dlt-system.conf.5.txt  dlt.conf.5  dlt.conf.5.md  dlt.conf.5.txt  dlt_book.txt  (+35 more)
doc/design/: dlt_offline_logstorage_design.md
doc/test/: dlt-test-qnx-slogger.1.md
examples/: CMakeLists.txt  README.txt
examples/example1/: CMakeLists.txt  example1.c
examples/example1_v2/: CMakeLists.txt  example1.c
examples/example1v2/: example1.c
examples/example2/: CMakeLists.txt  dlt_id.h  example2.c  example2.xml
examples/example2_v2/: CMakeLists.txt  dlt_id.h  example2.c  example2.xml
examples/example2v2/: CMakeLists.txt  example2.c
examples/example3/: CMakeLists.txt  dlt_id.h  example3.c  example3.xml
examples/example3_v2/: CMakeLists.txt  dlt_id.h  example3.c  example3.xml
examples/example3v2/: example3.c
examples/example4/: CMakeLists.txt  example4.c
examples/example4_v2/: CMakeLists.txt  example4.c
examples/example4v2/: CMakeLists.txt  example4.c
include/dlt/: CDltWrapper.h  CMakeLists.txt  dlt-logd-converter.hpp  dlt.h  dlt_client.h  dlt_common.h  dlt_common_api.h  dlt_cpp_extension.hpp  dlt_filetransfer.h  dlt_log.h  dlt_multiple_files.h  dlt_offline_trace.h  dlt_protocol.h  dlt_shm.h  dlt_types.h  dlt_user.h  dlt_user.h.in  dlt_user_macros.h  dlt_version.h  dlt_version.h.cmake
src/: CMakeLists.txt
src/adaptor/: CMakeLists.txt  dlt-adaptor-slog2.c  dlt-adaptor-stdin.c  dlt-adaptor-udp.c
src/android/: dlt-logd-converter.conf  dlt-logd-converter.cpp  dlt-logd-converter.rc  dlt-logd-converter.rc.in  dlt-logdctxt.json
src/console/: Android.mk  CMakeLists.txt  dlt-control-common.c  dlt-control-common.h  dlt-control-v2.c  dlt-control.c  dlt-convert-v2.c  dlt-convert.c  dlt-logstorage-ctrl.c  dlt-passive-node-ctrl.c  dlt-receive-v2.c  dlt-receive.c  dlt-sortbytimestamp.c  filter.txt
src/core_dump_handler/: 50-coredump.conf  50-coredump.conf.cmake  CMakeLists.txt  README  dlt_cdh.c  dlt_cdh.h  dlt_cdh_context.c  dlt_cdh_coredump.c  dlt_cdh_cpuinfo.c  dlt_cdh_cpuinfo.h  dlt_cdh_crashid.c  dlt_cdh_definitions.h  dlt_cdh_streamer.c  dlt_cdh_streamer.h
src/cxx_wrapper/: CDltWrapper.cpp  CMakeLists.txt
src/daemon/: Android.mk  CMakeLists.txt  dlt-daemon.c  dlt-daemon.h  dlt-daemon.rc  dlt-daemon.rc.in  dlt-daemon_cfg.h  dlt-log-levels.conf  dlt-trace-load.conf  dlt.conf  dlt_buffer_dump.c  dlt_buffer_dump.h  dlt_daemon_client.c  dlt_daemon_client.h  dlt_daemon_common.c  dlt_daemon_common.h  dlt_daemon_common_cfg.h  dlt_daemon_connection.c  dlt_daemon_connection.h  dlt_daemon_connection_types.h  dlt_daemon_event_handler.c  dlt_daemon_event_handler.h  dlt_daemon_event_handler_types.h  dlt_daemon_offline_logstorage.c  dlt_daemon_offline_logstorage.h  dlt_daemon_offline_logstorage_internal.h  dlt_daemon_qnx.c  dlt_daemon_qnx.h  dlt_daemon_serial.c  dlt_daemon_serial.h  dlt_daemon_socket.c  dlt_daemon_socket.h  dlt_daemon_unix_socket.c  dlt_daemon_unix_socket.h
src/dbus/: CMakeLists.txt  dlt-dbus-options.c  dlt-dbus.c  dlt-dbus.conf  dlt-dbus.h
src/dlt-qnx-system/: CMakeLists.txt  dlt-qnx-slogger2-adapter.cpp  dlt-qnx-system.c  dlt-qnx-system.conf  dlt-qnx-system.h  dlt-slog2ctxt.json
src/examples/: CMakeLists.txt  dlt-example-client.c  dlt-example-filetransfer.c  dlt-example-multicast-client.c  dlt-example-multicast-clientmsg-view.c  dlt-example-non-verbose-1.xml  dlt-example-user-func.c  (+6 more)
systemd/: CMakeLists.txt  dlt-adaptor-udp.service.cmake  dlt-dbus.service.cmake  dlt-example-user.service.cmake  dlt-receive.service.cmake  dlt-syslog.service.cmake  dlt-system.service.cmake  dlt.service  dlt.service.cmake  dlt.socket.cmake
tests/: CMakeLists.txt  dlt-logdctxt.json  dlt-test-cpp-extension.cpp  dlt-test-preregister-context.c  dlt_env_ll_unit_test.cpp  dlt_test_filetransfer.c  dlt_test_receiver.c  g_test_dlt_daemon_gateway.sh  gmock_dlt_daemon.cpp  gmock_dlt_daemon.h  gtest_common.h  gtest_dlt_common.cpp  gtest_dlt_common_v2.cpp  gtest_dlt_daemon.cpp  gtest_dlt_daemon_common.cpp  gtest_dlt_daemon_common_v2.cpp  gtest_dlt_daemon_event_handler.cpp  gtest_dlt_daemon_gateway.cpp  gtest_dlt_daemon_gateway.sh  gtest_dlt_daemon_multiple_files_logging.cpp  gtest_dlt_daemon_offline_log.cpp  gtest_dlt_daemon_offline_log.sh  gtest_dlt_daemon_qnx.cpp  gtest_dlt_daemon_v2.cpp  gtest_dlt_json_filter.cpp  gtest_dlt_sdjournal_chmap.cpp  gtest_dlt_shm.cpp  gtest_dlt_teardown.sh  gtest_dlt_user.cpp  gtest_dlt_user.sh  gtest_dlt_user_v2.cpp  hello.cpp  start_filetransfer_test.sh  start_logstorage_test.sh  start_multinode_test.sh  start_qnx_system_test.sh  start_system_logger_test.sh  start_systemd_journal_test.sh  test_dlt.conf  testfile-v2.dlt  (+4 more)
testscripts/: CMakeLists.txt  dlt.conf  dltdaemon  dltinfo.sh
(+583 files in other folders)
